# jsonschema-default

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  renovate.json5  setup.py
.github/workflows/: app.yml  python-app.yml  renovate.yml
jsonschema_default/: __init__.py  errors.py  main.py  options.py
jsonschema_instance/: __init__.py
schemas/: const.json  object.json  prop_type_list.json  prop_type_list_empty.json  simple.json  unknown_type.json
schemas/array/: anyOf.json  minItems.json  oneOf.json  string.json
schemas/default/: default.json  default_and_const.json
schemas/enum/: enum.json
schemas/number/: default.json  exclusive_min.json  invalid_exclusive_min.json  invalid_minmax.json  min.json  min_and_exclusive_min.json  multipleOf.json  multipleOf_with_minimum.json  negative_max.json
schemas/object/: missingObjectType.json  nestedObject.json  object.json
schemas/oneOf/: oneof_bool.json
schemas/ref/: abcd.json  anyOf.json  cycle.json  ref_schema.json  simple.json  streetaddress.json  streetaddress_no_defaults.json  thing.json
schemas/string/: maxLength.json  minLength.json  regex.json  unbound.json
tests/: test_array.py  test_default.py  test_enum.py  test_fill.py  test_loading.py  test_number.py  test_object.py  test_oneof.py  test_options.py  test_ref.py  test_ref_schema.py  test_schemas.py  test_string.py
