[tool.poetry]
name = "jsonschema-default"
version = "1.5.0"
description = "Create default objects from a JSON schema"
authors = ["Martin Boos <mboos@outlook.com>"]
maintainers = ["Martin Boos <mboos@outlook.com>"]
readme = "README.md"
homepage = ""
repository = "https://github.com/mnboos/jsonschema-default"
license = "GNU AGPL v3"

[tool.poetry.dependencies]
python = "^3.10"
rstr = "^3.2.1"
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
jsonschema = "^4.18.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
